crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
assertion_line: 44
expression: "<![CDATA["
---
- Comment: "[CDATA["

