crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan_raw_text-2.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "<style></styl"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: "</styl"

