crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan_raw_text.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "<style></style"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: "</style"

