crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan_rc_data-11.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
expression: "<textarea>{{"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: ""

