crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan_rc_data-12.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
assertion_line: 81
expression: "<textarea>{{ garbage  {{ }}</textarea>"
---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: " garbage  {{ "
- EndTag: textarea

